--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,3 +1,9 @@
+
+$gray-dark: hsl(0, 0%, 17%);
+$gray-light: hsl(0, 0%, 59%);
+$white:hsl(0, 0%, 100%);
+$black:hsl(0, 0%, 0%);
+
 .wrapper {
   width: 100%;
   height: 100%;
@@ -7,7 +13,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 15rem;
+    height: 17rem;
     text-align: center;
     padding-top: 2em;
     display: flex;
@@ -17,7 +23,7 @@
     .title {
       font-size: 25px;
       font-weight: 700;
-      color: white;
+      color: $white;
     }
     .search_form {
       display: flex;
@@ -30,7 +36,7 @@
       input {
         padding: 1em;
         border-radius: 10px 0px 0px 10px;
-        background-color: white;
+        background-color: $white;
         border: none;
         outline: none;
         width: 100%;
@@ -39,8 +45,8 @@
         border: none;
         outline: none;
         padding: 1em;
-        background-color: black;
-        color: white;
+        background-color: $black;
+        color: $white;
         border-radius: 0px 10px 10px 0px;
         &:hover {
           opacity: 0.6;
@@ -48,7 +54,7 @@
       }
     }
     .display_info {
-      padding:1em;
+      padding: 1em;
       border-radius: 10px;
       position: absolute;
       bottom: -4rem;
@@ -59,18 +65,20 @@
       align-items: center;
       justify-content: space-between;
       text-align: left;
-      background-color: white;
+      background-color: $white;
       width: 50rem;
       @media (max-width: 625px) {
         flex-direction: column;
         text-align: center;
         width: 20rem;
         height: 18rem;
-        bottom: -12rem;
+        bottom: -10rem;
         padding: 0em;
       }
       hr {
-        height: 4rem;
+        height: 3rem;
+        border: none;
+        border-right: 1px solid $gray-light;
         @media (max-width: 625px) {
           display: none;
         }
@@ -83,8 +91,8 @@
         }
         p {
           font-size: 13px;
-          color: gray;
-          font-weight: 600;
+          color: $gray-light;
+          font-weight: 500;
         }
         span {
           font-size: 16px;
@@ -94,7 +102,7 @@
     }
   }
   .map {
-    height: calc(100vh - 15rem);
+    height: calc(100vh - 17rem);
     width: 100%;
   }
 }
